# term-chat

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: tests.yml
term-chat/: __main__.py
term-chat/commands/: auth.py  chat.py  room.py
term-chat/services/: appwrite.py
term-chat/utils/: constants.py  room.py  user.py
term_chat/: __main__.py
term_chat/commands/: auth.py  chat.py  room.py
term_chat/utils/: constants.py  room.py  user.py
tests/: test_cli.py
