[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "term-chat"
version = "0.1.0"
description = "A python CLI app that allows you to chat in your terminal itself so that you never have to leave your workspace again to connect with your team."
authors = ["Ananya Nayak <ananyanayak102@gmail.com>"]
license = "GPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
typer = { version = "^0.9.0", extras = ["all"] }
prettytable = "^3.7.0"
appwrite = "^2.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pre-commit = "^3.0.0"
python-dotenv = "^1.0.0"

[tool.black]
line-length = 105
exclude = '''
/(
    \.git
  | \venv
)/
'''

[tool.isort]
profile = "black"
line_length = 105
src_paths = ["term_chat"]